2/k8s-manifests/01-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: asiayo
spec:
  serviceName: mysql
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-writer
  namespace: asiayo
  labels:
    role: writer
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-reader
  namespace: asiayo
  labels:
    role: reader
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    args: ["--read-only"]
    ports:
    - containerPort: 3306
